fix faq bullets nesting, and whitespace;

--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -47,6 +47,11 @@
           font-weight: 600;
         }
 
+        ul {
+          list-style-type: square;
+          margin: 0 1rem;
+        }
+
         font-size: 1rem;
         line-height: 1.5rem;
         font-weight: 400;
